unpackaged/main/default/objects/AutomationErrorLog__c/AutomationErrorLog__c.object-meta.xml
<CustomObject>
    <label>Automation Error Log</label>
    <nameField>
        <displayFormat>AELOG-{0000}</displayFormat>
        <label>Automation Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Error Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>