unpackaged/main/default/objects/AutomationErrorLog__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Automation Error Logs</relationshipLabel>
    <relationshipName>Automation_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>