unpackaged/main/default/objects/AutomationErrorLog__c/fields/Source_Application__c.field-meta.xml
<CustomField>
    <fullName>Source_Application__c</fullName>
    <label>Source Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GIdentify</fullName>
            </value>
            <value>
                <fullName>GVerify</fullName>
            </value>
            <value>
                <fullName>GAuthenticate</fullName>
            </value>
            <value>
                <fullName>PayNearMe</fullName>
            </value>
            <value>
                <fullName>TinCheck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>