unpackaged/main/default/objects/AutomationErrorLog__c/fields/SystemExceptionLog__c.field-meta.xml
<CustomField>
    <fullName>SystemExceptionLog__c</fullName>
    <label>System Exception Log</label>
    <referenceTo>System_Exception_Log__c</referenceTo>
    <relationshipLabel>Automation Error Logs</relationshipLabel>
    <relationshipName>Automation_Error_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>