unpackaged/main/default/objects/AutomationErrorLog__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Automation Error Logs</relationshipLabel>
    <relationshipName>Automation_Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>